[gd_scene load_steps=8 format=2]

[ext_resource path="res://Utilities/SaveUI/GameSaver.gd" type="Script" id=1]
[ext_resource path="res://Assets/dialoguebox1.png" type="Texture" id=2]
[ext_resource path="res://Utilities/SavesControl.gd" type="Script" id=3]
[ext_resource path="res://Assets/Back_button_selected.png" type="Texture" id=4]
[ext_resource path="res://Assets/Back_button.png" type="Texture" id=5]
[ext_resource path="res://Assets/Previous_save_button_selected.png" type="Texture" id=6]
[ext_resource path="res://Assets/Previous_save_button.png" type="Texture" id=7]

[node name="GameSaver" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_left = 32.0
margin_top = 64.0
margin_right = 288.0
margin_bottom = 176.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sprite" type="Sprite" parent="Control"]
position = Vector2( 128, 56 )
scale = Vector2( 2.25, 5.14286 )
texture = ExtResource( 2 )

[node name="Back" type="TextureButton" parent="Control"]
anchor_left = 0.75
anchor_top = 0.714
anchor_right = 0.75
anchor_bottom = 0.714
margin_left = -80.0
margin_top = 0.0319977
margin_right = 80.0
margin_bottom = 35.032
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="TextureButton" parent="Control"]
anchor_left = 0.5
anchor_top = 0.214
anchor_right = 0.5
anchor_bottom = 0.214
margin_left = -96.0
margin_top = 0.0319996
margin_right = 96.0
margin_bottom = 20.032
texture_normal = ExtResource( 7 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Control/Back" to="Control" method="_on_Back_pressed"]
[connection signal="pressed" from="Control/OptionButton" to="Control" method="_on_OptionButton_pressed"]
